--- a/config.json
+++ b/config.json
@@ -4,5 +4,9 @@
   "FFMPEG_BIN": "C:\\Users\\CleptesGameStation\\Desktop\\toaac\\ffmpeg-20200628-4cfcfb3-win64-static\\bin\\ffmpeg.exe",
   "_OUTPUT_DIR": "E:\\Users\\cleptes\\Documents\\programming\\Python\\yt-dl-sb\\output",
   "_TMP_DIR": "E:\\Users\\cleptes\\Documents\\programming\\Python\\yt-dl-sb\\tmp",
-  "REMOVE_SPONSORED": false
+  "REMOVE_SPONSORED": false,
+  "IGNORE_REGEX": [
+    ".*WAN Show.*"
+  ],
+  "REMOVE_SPONSORED": true
 }
